--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Picker</title>
+    <title>Colors Picker</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/logo-m.svg" type="image/x-icon">
+    <meta property="og:type" content="productivity" />
+    <meta property="og:title" content="Colors Picker - Next gen Colors Picker for you." />
+    <meta property="og:description" content="Next Colors Picker for you - That has more colors than all others." />
+    <meta property="og:image" content="https://colors-picker.netlify.app/images/OG.png" />
     <script src="/js/flatcolorsui.js" defer></script>
     <script src="/js/master.js" defer></script>
 </head>
