--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:title" content="Colors Picker - Next gen Colors Picker for you." />
     <meta property="og:description" content="Next Colors Picker for you - That has more colors than all others." />
     <meta property="og:image" content="https://colors-picker.netlify.app/images/OG.png" />
+    <meta name="google-site-verification" content="GxfUBK6FwikBtoKz_kuAA-Hwbz2QCOB_XEh-Bi7O7Hw" />
     <script src="/js/flatcolorsui.js" defer></script>
     <script src="/js/master.js" defer></script>
 </head>
