--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <meta property="og:title" content="Colors Picker - Next gen Colors Picker for you." />
     <meta property="og:description" content="Next Colors Picker for you - That has more colors than all others." />
     <meta property="og:image" content="https://colors-picker.netlify.app/images/OG.png" />
-    <meta name="google-site-verification" content="GxfUBK6FwikBtoKz_kuAA-Hwbz2QCOB_XEh-Bi7O7Hw" />
     <script src="/js/flatcolorsui.js" defer></script>
     <script src="/js/master.js" defer></script>
 </head>
@@ -61,21 +60,13 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container ">
         <div class="main-colors" id="colors-container">
 
         </div>
     </div>
 
-
-    <div class="credit-box w-100 text-center d-flex justify-content-center mb-4 mt-5">
-        <p class="m-0 d-inline">colors&nbsp;from&nbsp;-&nbsp;</p>
-        <a href="http://www.flatcolorsui.com/" class="d-inline">
-            <p class="m-0 d-inline">flatcolorsui.com</p>
-        </a>
-    </div>
-
-    <footer class="border-top d-flex justify-content-center pt-5 pb-5">
+    <footer class="border-top d-flex justify-content-center pt-5 pb-5 mt-4">
         <a href="https://github.com/yc9274/color-picker">
             <svg viewBox="0 0 16 16" version="1.1">
                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
